# cimetiere-gestion

./: .Dockerfile  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  4.12.0  LICENCE  Makefile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_production.txt  run_production.py
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  api.py  forms.py  models.py  services.py  urls.py  views.py
apps/accounts/management/commands/: init_roles.py  setup_production.py
apps/accounts/migrations/: 0001_initial.py
apps/billing/: __init__.py  admin.py  api.py  apps.py  models.py  pdf_generator.py  services.py  urls.py  views.py
apps/billing/migrations/: 0001_initial.py
apps/billing/templates/billing/: facture_detail.html  mes_factures.html  paiement_form.html
apps/core/: __init__.py  admin.py  api.py  api_urls.py  api_views.py  forms.py  import_export.py  import_export_views.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_alter_demandeexhumation_valide_par_exhumation.py  0003_alter_caveau_type_caveau_delete_exhumation.py
apps/core/templates/core/: accueil.html  configurer_cimetiere.html
apps/mfa/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
apps/mfa/migrations/: 0001_initial.py
apps/mfa/templates/mfa/: login.html  verification.html
apps/notifications/: __init__.py  admin.py  models.py  services.py  tasks.py  urls.py  views.py
apps/notifications/management/commands/: envoyer_notifications.py
apps/notifications/migrations/: 0001_initial.py
apps/portal/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
apps/portal/migrations/: 0001_initial.py
apps/portal/templates/portal/: carte_publique.html  facture_detail.html  mes_factures.html  mes_reservations.html  payer_facture.html  reservation_form.html
apps/reports/: __init__.py  admin.py  models.py  services.py  urls.py  views.py
apps/reports/migrations/: 0001_initial.py  __init__.py
apps/reports/templates/reports/: dashboard.html  rapport_concessions.html  rapport_financier.html  rapport_financier_pdf.html  rapport_notifications.html  rapport_occupation.html
config/: __init__.py  api.py  asgi.py  production_settings.py  settings.py  urls.py  wsgi.py
docs/: deployment.md  fonctionnalites.md  installation.md
frontend/: api_client.py  main.py  theme.py
frontend/components/: __init__.py  common_components.py
frontend/pages/: __init__.py  carte_page.py  concessions_page.py  dashboard_page.py  factures_page.py  import_export_page.py  login_page.py  mfa_page.py  notifications_page.py  profile_page.py  reports_page.py  reservations_page.py
nginx/: nginx.conf
scripts/: backup_db.py  daily_tasks.sh  run_server.sh  run_tests.sh  setup.sh  test_conformite_cdc.py
templates/: 400.html  403.html  404.html  500.html  base.html
templates/admin/notifications/: dashboard.html
templates/emails/: base.html  concession_alert.html  invoice_template.html  mfa_code.html  payment_reminder.html
templates/mfa/: login.html  register.html  verification.html
templates/pdf/: concession_certificate.html
templates/portal/: accueil.html  carte_publique.html  dashboard_admin.html
templates/reports/: base_rapport.html
tests/: __init__.py  test_accounts.py  test_billing.py  test_core.py  test_notification.py
